client/src/styles/components/SharingComponent.scss
/* Sharing Component Styles
===================================================================================================================== */

.sharingcomponent {
  
  margin-bottom: $spacer;
  
  ul.buttons {
    
    margin: 0;
    padding: 0;
    list-style-type: none;
    
    > li.button {
      padding: 0;
      font-size: 0;
      margin: 0 $spacer-half $spacer-half 0;
    }
    
    &.vertical {
      
      > li.button {
        display: block;
      }
      
    }
    
    &.horizontal {
      
      font-size: 0;
      
      > li.button {
        display: inline-block;
      }
      
    }
    
  }
  
}

